--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 <div class="home">
-    <h2>Welcome to {{ site.title }}</h2>
+    <h2>Spelunking in Software</h2>
+    <p>This is my current technical blog.</p>
+    <p>My old technical blog is over <a href="http://foobarcat.blogspot.com">here</a></p>
+    <h2>Blog Posts</h2>
     <ul>
         {% for post in site.posts %}
             <li>
