link back to homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout: default
     <h2>Spelunking in Software</h2>
     <p>This is my current technical blog.</p>
     <p>My old technical blog is over <a href="http://foobarcat.blogspot.com">here</a></p>
+    <p>MY homepage is <a href="https://foobarcat.com">here</a></p>
     <h2>Blog Posts</h2>
     <ul>
         {% for post in site.posts %}
