add header and footer with contact details

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,15 @@ layout: default
 <article>
     <h1>{{ page.title }}</h1>
     <p><small>Published on {{ page.date | date: "%B %d, %Y" }}</small></p>
+    <p class="post-author">
+        By {{ site.author.name }}
+        · {{ site.author.email }}
+        {% if site.author.linkedin %}
+          · <a href="{{ site.author.linkedin }}">LinkedIn</a>
+        {% endif %}
+        {% if site.author.homepage %}
+          · <a href="{{ site.author.homepage }}">Homepage</a>
+        {% endif %}
+      </p>
     {{ content }}
 </article>
