--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,13 @@
         {{ content }}
     </main>
     <footer>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
+        <p>
+            &copy; {{ site.time | date: "%Y" }} {{ site.author.name }}
+            · {{ site.author.email }}
+            {% if site.author.linkedin %}
+                · <a href="{{ site.author.linkedin }}">LinkedIn</a>
+            {% endif %}
+        </p>
     </footer>
 </body>
 </html>
