add back link to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 <article>
+    <p class="back-link">
+        <a href="/">← Back to all articles</a>
+      </p>      
     <h1>{{ page.title }}</h1>
     <p><small>Published on {{ page.date | date: "%B %d, %Y" }}</small></p>
     <p class="post-author">
