tidy blog homepaage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,23 @@ layout: default
 ---
 <div class="home">
     <h2>Spelunking in Systems, Software, and Psychology</h2>
-    <p>This is my current technical blog.</p>
-    <p>My old technical blog is over <a href="http://foobarcat.blogspot.com">here</a></p>
-    <p>MY homepage is <a href="https://foobarcat.com">here</a></p>
+    <p>I’m Matthew Ault, a backend and infrastructure engineer who likes thinking at the intersection of systems, software, and human behaviour.</p>
+
+    <p>This blog is where I keep longer-form writing on:</p>
+
+    <ul>
+        <li>distributed systems, data pipelines, and HLS/media platforms</li>
+        <li>incentives, engineering culture, and organisational drift</li>
+        <li>tools, workflows, and occasional production war stories</li>
+    </ul>
+
+    <p>If you’ve landed here from my main site:</p>
+
+    <ul>
+        <li>My older technical posts live at <a href="http://foobarcat.blogspot.com">my original blog</a>.</li>
+        <li>My consulting, projects, and contact details are at <a href="https://foobarcat.com">foobarcat.com</a>.</li>
+    </ul>
+
     <h2>Blog Posts</h2>
     <ul>
         {% for post in site.posts %}
