--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="home">
-    <h2>Cognition · Systems · Architecture</h2>
-    <p>I’m Matthew Ault, a distributed systems engineer interested in the deep structure of systems, both computational and cognitive.</p>
+    <h2>Cognition · Systems · Engineering</h2>
+    <p>I’m Matthew Ault, a distributed systems engineer interested in the deep structure of systems, both computational, organisational and cognitive.</p>
 
     <p>This blog is where I keep longer-form writing on:</p>
 
