update main site link phrasing

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,7 @@ layout: default
         <li>Cognitive systems: the internal architectures and hidden patterns that underpin the mind</li>
     </ul>
 
-    <p>If you’ve landed here from my main site:</p>
-
-    <ul>
-        <li>My consulting, projects, and contact details are at <a href="https://foobarcat.com">foobarcat.com</a>.</li>
-    </ul>
-
-    <h2>Blog Posts</h2>
+    <p>My main site, <a href="https://foobarcat.com">foobarcat.com</a>, is where I keep details on my consulting work, current projects, and contact information.</p>    <h2>Blog Posts</h2>
     <ul>
         {% for post in site.posts %}
             <li>
