fix clumsy wording

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,7 @@ layout: default
 ---
 <div class="home">
     <h2>Cognition · Systems · Engineering</h2>
-    <p>I’m Matthew Ault, a distributed systems engineer interested in the deep structure of systems, both computational, organisational and cognitive.</p>
-
+    <p>I’m Matthew Ault, a distributed systems engineer focused on the deep structure of computational, organisational, and cognitive systems.</p>
     <p>This blog is where I keep longer-form writing on:</p>
 
     <ul>
