make wording more consistent

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
 
     <ul>
         <li>Technical systems: distributed infrastructure, data pipelines, and media platforms</li>
-        <li>Human systems: incentives, culture, and the dynamics of organisational drift</li>
+        <li>Organisational systems: incentives, culture, and the dynamics of organisational drift</li>
         <li>Cognitive systems: the internal architectures and hidden patterns that underpin the mind</li>
     </ul>
 
