--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 <div class="home">
-    <h2>Cognition · Systems · Engineering</h2>
+    <h1>Writing</h1>
+    <p>
     <p>I’m Matthew Ault, a distributed systems engineer (ex-Segment) focused on the deep structure of computational, organisational, and cognitive systems.</p>
     <p>This blog is where I keep longer-form writing on:</p>
 
